# nyc-taxi-predictions

./: .gitignore  README.md  libomp.dylib  main.py  mlflow.db  pyproject.toml
experiments/: 01-databricks_mlflow_model_experiments.ipynb  challenger-experiments.ipynb  experiments-challenger-experiments.ipynb
mlruns/0/: meta.yaml
notebooks/: initial_tracking.ipynb  mlflow.db
notebooks/mlruns/1/116ff79530bc425489a7aab89e635be6/artifacts/: estimator.html
notebooks/mlruns/2/05c4ec5ad0f245dda2fafd1cc99c8963/artifacts/: estimator.html
notebooks/mlruns/2/1ceb85b5c7244ffaa051a60479e52e03/artifacts/: estimator.html
notebooks/mlruns/2/266f17c24d7944cb93924fab2fc68215/artifacts/: estimator.html
notebooks/mlruns/2/345912a49f5b4d259938b042bd170f31/artifacts/: estimator.html
notebooks/mlruns/2/3673880d1c384481b2f4dd100aa4c3f6/artifacts/: estimator.html
notebooks/mlruns/2/5e476ab4d7bc4c0396610a43853a8bed/artifacts/: estimator.html
notebooks/mlruns/2/60095a2341cd45b38a7eac4f17bbbca7/artifacts/: estimator.html
notebooks/mlruns/2/62c7941ad70b4caebc7776c5bd9f6783/artifacts/: estimator.html
notebooks/mlruns/2/733c7d04085c49208a487cc186a8b0d4/artifacts/: estimator.html
notebooks/mlruns/2/8190ba24874d40a7a0b8bdb9fb40a685/artifacts/: estimator.html
notebooks/mlruns/2/9d84d12f47ff4884a11fb09197615dca/artifacts/: estimator.html
notebooks/mlruns/2/ae3fddeb53da4aa69549e7c108bd2d99/artifacts/: estimator.html
notebooks/mlruns/2/db7cc01c78e54fd780c7c297427e5c6e/artifacts/: estimator.html
reports/: entrega_trabajo_en_clase.md  runs_summary.json
(+36 files in other folders)
