[project]
name = "nyc-taxi-predictionss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-sdk>=0.69.0",
    "jupyter>=1.1.1",
    "mlflow>=2.10",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]
